@@ -1,11 +1,4 @@
-Pourrait-on aller plus loin sur la gestion des hardlines? Découper
-un document en liste de sous-documents sans hardlines, séparés par
-des hardlines?
-
-Réfléchir à un combinateur d'auto-découpage pour B. Canou.
-
-Réfléchir aussi à un combinateur Lazy. Mais serait utile seulement
-si pas utilisé dans un groupe?
+Réfléchir à une feuille primitive custom pour B. Canou.
 
 Try to speed up the random generator.
   choose, applied to a list, is too slow: use an array?
